aws/mysql-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:latest
          ports:
            - containerPort: 3306
          resources:
            requests:
              cpu: "150m"
              memory: "400M"
            limits:
              cpu: "300m"
              memory: "800M"

          livenessProbe:
            exec:
              command:
                - mysqladmin
                - ping
                - -h
                - 127.0.0.1
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3

          # Readiness probe: Checks if MySQL is ready to accept connections
          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - "MYSQL_PWD=$MYSQL_ROOT_PASSWORD mysql -u root -h 127.0.0.1 -e 'SELECT 1'"
            initialDelaySeconds: 30
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3

---
apiVersion: v1
kind: Service
metadata:
  name: flask-mysql
spec:
  selector:
    app: mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  type: ClusterIP
  # clusterIP: None  # Headless service for internal communication
