aws/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: my-istio-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway  # Use Istio's default ingress gateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "curiodesk.com"  # Change this to your actual domain
